--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Andrée Barnier"
 title_separator          : "-"
 name                     : &name "Andrée Barnier"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://andreebar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Andreebar/andreebarnier"
 
